# AIE6-TMD

./: .gitignore
00_AIM_Quicklinks/: README.md
02_Embeddings_and_RAG/: .gitignore  Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: pdf_utils.py  text_utils.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  langsmith-eval.py  requirements.txt
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb
10_Finetuning_Reasoning_Model/: Session 10 - Bonus Activity - Fine-tuning with Unsloth and GRPO.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb  pyproject.toml
12_OpenAI_Agents_SDK/assets/: TheOpenChampionship.md
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml  testset.json
14_Open_DeepResearch/: Golf-Swing-Mechanics.md  open-deep-research.ipynb  pyproject.toml
