[project]
name = "open_deep_research"
version = "0.0.5"
description = "Planning, research, and report generation."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.12" 
dependencies = [
    "langgraph>=0.4.5",
    "langchain>=0.1.20",
    "langchain-community>=0.0.28",
    "langchain-openai>=0.1.6",
    "langchain-anthropic>=0.1.7",
    "langchain-groq>=0.1.0",
    "langsmith>=0.1.19",
    "langserve>=0.0.49",  # optional
    "openai>=1.61.0",
    "tavily-python>=0.5.0",
    "exa-py>=1.8.9",
    "arxiv>=2.1.3",
    "pymupdf>=1.25.3",
    "xmltodict>=0.14.2",
    "jupyter>=1.1.1",
    "pydantic>=2.6.1",
    "requests>=2.31.0",
]
